# tetris-ai

./: .gitignore  Cargo.toml  README.md
ai/: Cargo.toml
ai/src/: flatness_states.rs  lib.rs  recursive_search.rs  row_ai.rs  states.rs
benches/: ai_benchmark.rs  util.rs
game/: Cargo.toml
game/src/: board copy.rs  board.rs  consts.rs  consts_row.rs  lib.rs  pieces.rs  rng.rs  row_board.rs
src/: main.rs
